Update EogWindow's image handle when selecting already loaded images

https://bugzilla.gnome.org/show_bug.cgi?id=655889